--- a/trunk/skin/overlay.css
+++ b/trunk/skin/overlay.css
@@ -1,3 +1,3 @@
 #backendinfo_statusbox {
-  background: url("chrome://backendinfo/skin/zoom.png") top left no-repeat;
+  background: url("chrome://backendinfo/skin/magnifier.png") top left no-repeat;
 }
