--- a/skin/overlay.css
+++ b/skin/overlay.css
@@ -1,3 +1,7 @@
 #backendinfo_statusbox {
   background: url("chrome://backendinfo/skin/magnifier.png") top left no-repeat;
 }
+
+#backendinfo_text {
+    display:none;
+}
